--- a/basic/assets/resource/config_route.json
+++ b/basic/assets/resource/config_route.json
@@ -4,7 +4,8 @@
     "desc":"app小程序块注册列表v0.6.beta",
     "appList":[
         {"name":"home","path":"home","component":"home"},
-        {"name":"home2","path":"home2","component":"home2"},
-        {"name":"updateLog","path":"updateLog","component":"updateLog"}
+        {"name":"updateLog","path":"updateLog","component":"updateLog"},
+        {"name":"about","path":"about","component":"about"},
+        {"name":"detail","path":"detail/:id","component":"detail"}
     ]
 }
