--- a/api/assets/package.json
+++ b/api/assets/package.json
@@ -21,6 +21,7 @@
         "axios-cancel": "^0.2.2",
         "mobx": "^5.9.0",
         "mobx-react": "^5.4.3",
+        "nprogress": "^0.2.0",
         "react": "^15.6.2",
         "react-codemirror": "0.3.0",
         "react-dom": "^15.6.2",
