--- a/basic/assets/package.json
+++ b/basic/assets/package.json
@@ -23,9 +23,11 @@
         "mobx": "^5.9.0",
         "mobx-react": "^5.4.3",
         "nprogress": "^0.2.0",
+        "quill-image-drop-module": "^1.0.3",
         "react": "^15.6.2",
         "react-dom": "^15.6.2",
         "react-intl": "^2.8.0",
+        "react-quill": "1.1.0",
         "react-router": "^3.0.2"
     },
     "devDependencies": {
