--- a/basic/package.json
+++ b/basic/package.json
@@ -31,12 +31,13 @@
   "author": "hceve520",
   "dependencies": {
     "axios": "^0.18.0",
+    "compression": "1.7.3",
     "hc-bee": "^0.1.6",
     "hc-common-user-auth": "^1.0.19",
     "hc-proxy": "^1.0.0",
     "lodash": "4.17.4",
     "path-ignore": "^1.0.1",
-    "compression":"1.7.3"
+    "qiniu": "^7.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
